--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,16 @@
-version: '3.7'
+version: "3.7"
+
 services:
-  sqlserver1:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  sql-server:
+    image: mcr.microsoft.com/mssql/server:2019-CU11-ubuntu-20.04
+    container_name: sql-server-2019
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=Dq021221!
+      - MSSQL_PID=Developer
     ports:
       - "1433:1433"
-    env_file:
-      - sqlserver.env
-      - sapassword.env
     volumes:
-      - sqlsystem:/var/opt/mssql/
-      - sqldata:/var/opt/sqlserver/data
-      - sqllog:/var/opt/sqlserver/log
-      - sqlbackup:/var/opt/sqlserver/backup
-volumes:
-  sqlsystem:
-  sqldata:
-  sqllog:
-  sqlbackup:
+      - ./data/data:/var/opt/mssql/data
+      - ./data/log:/var/opt/mssql/log
+      - ./data/secrets:/var/opt/mssql/secrets
